Coded ai stuff, I still need to check it